test/scc_test/stmt/semantic-errors/038.a
038.t:3:7: error: a break statement may only be used within a loop or switch